==========================================================
The current maintainer of this library is the
RIPE NCC Global Information Infrastructure department.

You can reach us at https://bitbucket.org/ripencc/bgpdump

PLEASE DO NOT E-MAIL INDIVIDUAL DEVELOPERS ABOUT
ISSUES, AS YOUR E-MAIL MAY BE LOST
==========================================================

2018-09-26 Colin Petrie <cpetrie@ripe.net> v1.6.0
	* Fix overflow for large records
	* Add basic '-q' quiet mode
	* fix off-by-one in peer index assert
	* fix MyAS handling in open message
	* version bump as structs have new fields and sizes,
	  apps should be recompiled

2017-01-15 Colin Petrie <cpetrie@ripe.net>
	* Add support for BGP Large Communities

2016-09-15 Colin Petrie <cpetrie@ripe.net> v1.5.0
	* Many security fixes, crashes, segfaults, memory leaks fixed.
	* Many fixes provided by Christoph Biedl from Debian port
	* Fuzzed inputs, hints and ideas provided by Guillaume Valadon
	* Thread-safety fixes from CAIDA/bgpstream version of bgpdump
	* version bump as new fields have been added to structs, apps
	  should be recompiled

2015-11-05 Colin Petrie <cpetrie@ripe.net>
	* Adding support for draft-petrie-grow-mrt-add-paths
	  Note that this adds various output format changes, when reading messages
	  with Add-path Path-IDs in them, there are extra columns and fields in
	  the bgpdump output

2015-10-08 Alexis Fasquel <alexis@pch.net>
	* Adding support for Extended Timestamp MRT Header corresponding to MRT type BGP4MP_ET
	  Note that this changes the semantics of the output of bgpdump - when a messages
	  with Extended Timestamp MRT Header is parsed, the microseconds attribute
	  is appended to the timestamp (.xxxxxx)

2015-09-19 Colin Petrie <cpetrie@ripe.net>
	* Adding support for BGP4MP_MESSAGE_LOCAL and BGP4MP_MESSAGE_AS4_LOCAL subtypes
	  Note that this changes the semantics of the output of bgpdump - when an entry is