@@ -8,6 +8,9 @@ PLEASE DO NOT E-MAIL INDIVIDUAL DEVELOPERS ABOUT
 ISSUES, AS YOUR E-MAIL MAY BE LOST
 ==========================================================
 
+2019-02-09 Italo Cunha <cunha@dcc.ufmg.br>
+	* Add '-u' flag to print unknown attributes in oneline (-m) mode
+
 2018-09-26 Colin Petrie <cpetrie@ripe.net> v1.6.0
 	* Fix overflow for large records
 	* Add basic '-q' quiet mode
